/*
 * Tencent is pleased to support the open source community by making TKEStack
 * available.
 *
 * Copyright (C) 2012-2020 Tencent. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use
 * this file except in compliance with the License. You may obtain a copy of the
 * License at
 *
 * https://opensource.org/licenses/Apache-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OF ANY KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations under the License.
 */

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package tkestack.io.tke.api.mesh.v1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1";

// ConfigMap holds configuration data for tke to consume.
message ConfigMap {
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Data contains the configuration data.
  // Each key must consist of alphanumeric characters, '-', '_' or '.'.
  // Values with non-UTF-8 byte sequences must use the BinaryData field.
  // The keys stored in Data must not overlap with the keys in
  // the BinaryData field, this is enforced during validation process.
  // +optional
  map<string, string> data = 2;

  // BinaryData contains the binary data.
  // Each key must consist of alphanumeric characters, '-', '_' or '.'.
  // BinaryData can contain byte sequences that are not in the UTF-8 range.
  // The keys stored in BinaryData must not overlap with the ones in
  // the Data field, this is enforced during validation process.
  // +optional
  map<string, bytes> binaryData = 3;
}

// ConfigMapList is a resource containing a list of ConfigMap objects.
message ConfigMapList {
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is the list of ConfigMaps.
  repeated ConfigMap items = 2;
}

// Database describes the attributes of a MeshManager.
message DataBase {
  optional string host = 1;

  optional int32 port = 2;

  optional string userName = 3;

  optional string password = 4;

  optional string dbName = 5;
}

// MeshManager is a manager to manager mesh clusters.
message MeshManager {
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Spec defines the desired identities of MeshManager.
  // +optional
  optional MeshManagerSpec spec = 2;

  // +optional
  optional MeshManagerStatus status = 3;
}

// MeshManagerList is the whole list of all meshmanagers which owned by a tenant.
message MeshManagerList {
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // List of volume decorators.
  repeated MeshManager items = 2;
}

// MeshManagerSpec describes the attributes of a MeshManager.
message MeshManagerSpec {
  optional string tenantID = 1;

  optional string clusterName = 2;

  optional string version = 3;

  optional DataBase dataBase = 4;

  optional StorageBackend tracingStorageBackend = 5;

  optional StorageBackend metricStorageBackend = 6;
}

// MeshManagerStatus is information about the current status of a MeshManager.
message MeshManagerStatus {
  // +optional
  optional string version = 1;

  // Phase is the current lifecycle phase of the MeshManager of cluster.
  // +optional
  optional string phase = 2;

  // Reason is a brief CamelCase string that describes any failure.
  // +optional
  optional string reason = 3;

  // RetryCount is a int between 0 and 5 that describes the time of retrying initializing.
  // +optional
  optional int32 retryCount = 4;

  // LastReInitializingTimestamp is a timestamp that describes the last time of retrying initializing.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time lastReInitializingTimestamp = 5;
}

// StorageBackend describes the attributes of a backend storage
// StorageType can be "influxdb","elasticsearch","es","thanos"
message StorageBackend {
  optional string storageType = 1;

  repeated string storageAddresses = 2;

  // +optional
  optional string queryAddress = 3;

  // +optional
  optional string userName = 4;

  // +optional
  optional string password = 5;
}

